# sdl-plus-plus-v4

./: .gitignore  CMakeLists.txt  sdl_plus_plus_v4.kdev4
.kdev4/: sdl_plus_plus_v4.kdev4
example/: CMakeLists.txt
example/src/: main.cpp
sdl-plus-plus-lib/: CMakeLists.txt
sdl-plus-plus-lib/include/internal/: utils.hpp
sdl-plus-plus-lib/include/sdl-plus-plus-v4/: drawing.h  drawing.hpp  flow.h  flow.hpp  resource.h  sdl-plus-plus.hpp
sdl-plus-plus-lib/src/: drawing.cpp  flow.cpp  resource.cpp
